--- a/autoparam_stochastic_analysis.tex
+++ b/autoparam_stochastic_analysis.tex
@@ -399,7 +399,7 @@ Since, there are certain advantages in the use of one form of $m_{i}(u,y)$ and $
 
 To obtain a limiting generator for the martingale problem, we need an averaging operator where the averaging is done with respect to the invariant measure concentrated on the closed trajectories.
 
-In the deterministic context Neistadt's condition ~\citep{neistadt75:_passag_throug_reson_in_two_frequen_probl, neistadt75:_averag_in_multi_frequen_system,lochak88:_multip_averag_for_class_system} ensures the existence of an average transverse force that drives the trajectories away from the resonance zones. For the stochastic case, it was shown~\citet{ramakrishnan00:_near_reson_motion_of_random} that even for the case when Neistadt's condition does not hold, passage of trajectories through resonance without getting captured can be ensured if appropriate conditions on the noise are satisfied.
+In the deterministic context Neistadt's condition ~\citep{neishtadt75:_passag_throug_reson_in_two_frequen_probl, neishtadt75:_averag_in_multifrequen_system,lochak88:_multip_averag_for_class_system} ensures the existence of an average transverse force that drives the trajectories away from the resonance zones. For the stochastic case, it was shown~\citet{ramakrishnan00:_near_reson_motion_of_random} that even for the case when Neistadt's condition does not hold, passage of trajectories through resonance without getting captured can be ensured if appropriate conditions on the noise are satisfied.
 
 Using \eqref{E:drift2} in the $\Aave$-averaging operator yields on each leaf $\Gamma_i$, for $y=(K,I) \in \Gamma_i$,
 \begin{gather}
