--- a/sgwaves_stochastic_analysis.tex
+++ b/sgwaves_stochastic_analysis.tex
@@ -15,7 +15,7 @@ In certain applications, for example in experiments carried out on spacecraft wh
 \subsection{Governing Equations}
 \label{s:governing equations}
 
-Although our ultimate goal is to study surface wave patterns, we begin by considering the `internal' motion of the fluid at whose surface these wave patterns form. For an incompressible fluid whose velocity is described by the vector $\boldsymbol{u}$, the Boussinesq approximation~\citep{kundu90:_fluid_mechan} holds and conservation of mass is expressed by the continuity equation
+Although our ultimate goal is to study surface wave patterns, we begin by considering the `internal' motion of the fluid at whose surface these wave patterns form. For an incompressible fluid whose velocity is described by the vector $\boldsymbol{u}$, the Boussinesq approximation~\citep{kundu02:_fluid_mechan} holds and conservation of mass is expressed by the continuity equation
 \begin{equation}
 \nabla \cdot \boldsymbol{u}= 0 \label{e:Cons Mass}
 \end{equation}
@@ -292,7 +292,7 @@ form} becomes
 % &\geq 0\\
 % \tilde{\boldsymbol{x}}_0^\epsilon& = \boldsymbol{x} \in \R^4
 % \end{align*}
-With the equation in this form, we are able to apply a result from~\citet{khas'minskii66:_stoch_proc}. This result tells us that as $\epsilon \to 0$, $\tilde{\boldsymbol{x}}_t^\epsilon$ converges in probability to
+With the equation in this form, we are able to apply a result from~\citet{khasminskii66:_stoch_proc}. This result tells us that as $\epsilon \to 0$, $\tilde{\boldsymbol{x}}_t^\epsilon$ converges in probability to
 \begin{align*}
 \dot{\boldsymbol{x}}_t &= \Tave[\boldsymbol{b}^1(\boldsymbol{x}_t,t/\epsilon)] = \bar{\nabla}\Tave[H(\boldsymbol{x}_t)] = \bar{\nabla} K(\boldsymbol{x}_t), & t \geq 0\\
 \boldsymbol{x}_0 &= \boldsymbol x \in \reals^4
