--- a/main.tex
+++ b/main.tex
@@ -143,7 +143,7 @@ To Maris V. Neimanis.
 \backmatter
 
 \bibliographystyle{abbrvnat}
-\bibliography{../../main}
+\bibliography{main.bib}
 
 % \aubio
 % \input{biography}
